--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Resume Builder</title>
 <!--linking the stylesheet with html-->
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -33,8 +35,13 @@
        <label for="nationality">Nationality:</label>
         <input type="text" id="nationality" placeholder="Enter your Nationality" required>
         <br>
-    </fieldset>
-    <br>
+                <!-- Profile Picture -->
+
+        <label for="profilePicture" > Profile Picture</label>
+        <input type="file" id="profilePicture"  accept="image/*" required>
+        <br>
+     </fieldset>
+      <br>
     <!--creating another fieldset for credentials-->
     <fieldset>
         <legend><b>Education</b></legend>
@@ -58,6 +65,8 @@
         <label for="skills">Skills:</label>
         <textarea id="skill" placeholder="Enter your Skills" rows="5" required></textarea>
         <br>
+
+
 
     </fieldset>
 <br>
